tests/parser-test-files/bad-files/parse-type.12.error
error: Malformed function type
  --> test:4:14
   |
 4 |  (declare f (T ->))
   |                ^^ missing return type
